# linguappt

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi.yml  testpypi.yml
apidocs/source/: conf.py  index.rst  linguappt.en.rst  linguappt.es.rst  linguappt.rst
docs/: genindex.html  index.html  linguappt.en.html  linguappt.entry.html  linguappt.es.html  linguappt.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: linguappt.entry.rst.txt  linguappt.es.rst.txt  linguappt.rst.txt  modules.rst.txt
entry/: command.py  usage.py
linguappt/: __init__.py  filereader.py  lib.py  pdf.py  phrase_ppt.py  structure_kg_ppt.py  vocab_ppt.py
linguappt/_entry/: command.py  usage.py
linguappt/de/: phrase_summary.py  structure_kg_summary.py
linguappt/de/templates/: phrase_german_classic.pptx  structure_kg_german_classic.pptx
linguappt/en/: _vocab_meta.py  phrase_summary.py  structure_kg_summary.py  vocab_meta.py  vocab_summary.py
linguappt/en/templates/: phrase_english_classic.pptx  structure_kg_english_classic.pptx  vocab_english_classic.pptx  vocab_english_watermark.pptx
linguappt/entry/: command.py
linguappt/es/: phrase_summary.py  structure_kg_summary.py  templates.py  vocab_meta.py  vocab_summary.py
linguappt/es/templates/: phrase_spanish_classic.pptx  structure_kg_spanish_classic.pptx  vocab_spanish_classic.pptx  vocab_spanish_watermark.pptx
tests/: en_phrase.forpptx.csv  es_phrase.forpptx.csv  test_lib.py  test_linguappt.py  test_phraseppt.py  test_vocab_summary.py  test_vocabppt.py
